--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" href="http://i122.photobucket.com/albums/o260/mhilka/minigifs/balaozinho38.gif">
+		<link rel="shortcut icon" href="http://i122.photobucket.com/albums/o260/mhilka/minigifs/balaozinho38.gif">
 		<title>Question!</title>
 		<link rel="stylesheet" type="text/css" href="./style.css" />
 		<style type="text/css" />
@@ -252,8 +252,6 @@
 					<p>Liege waffles, the most popular contemporary Belgian waffle variety, are rumored to have been invented during the 18th century, as well, by the chef to the prince-bishop of Liege.</p>
 					<h2>who was the first scientist to propose that the universe is expanding?" </h2>
 					<p>Edwin Hubble published a velocity-distance relation that strongly supported an expanding universe and, consequently, the Big Bang theory.</p>
-					<h2>who is actually going to read all of this?</h2>
-					<p>*whispers* even I didn't ><;; </p>
 				</div>
        			 </div>
 
@@ -271,8 +269,6 @@
 					<p><span style="color:#fff;background-color:#888">A hiccup comes from an involuntary contraction of the diaphragm, producing asudden intake of air. The glottis (the vocal apparatus of the larynx) slams shut at the same time, so that the column of air strikes the closed glottis to produce the characteristic, onomatopoeic noise.</span></p>
 					<h2>What if Earth were twice as big?</h2>
 					<p><span style="color:#fff;background-color:#888">If Earth's diameter were doubled to about 16,000 miles, the planet's mass would increase eight times, and the force of gravity on the planet would be twice as strong. All the plants and animals that currently exist would collapse under their own doubled weight, and new, stockier species would arise.</span></p>
-					<h2>What am I even doing with my life.</h2>
-					<p><span style="color:#fff;background-color:#888">I feel you. ; n ; </span></p>
 				</div>
 			</div>
 		
@@ -337,9 +333,9 @@
 				</div>
 				<div class="content">
 					<h2>How are you?</h2>
-					<p><span style="color:#fff;background-color:#888">DYINNGGGG</span></p>
-					<h2>How do you only have like 2 questions for this section??? And they're not even informational?? </h2>
-					<p><span style="color:#fff;background-color:#888">I got lazy.</span></p>
+					<p><span style="color:#fff;background-color:#888">So busy with school!</span></p>
+					<h2>How do you only have 2 questions for this section??? And they're not even informative?? </h2>
+					<p><span style="color:#fff;background-color:#888">BUSY WITH SCHOOL!</span></p>
 					
 				</div>
        			 </div>
