--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@
 					<p>Around 10 per cent of the population suffer from phobias. Some may be triggered by a traumatic event while others are linked to physical problems. Studies suggest that simple phobias are partly genetic while others may be due to cultural history. For example, a fear of spiders may be passed down from the Middle Ages when spiders were associated with the plague, as victims' deserted homes became shrouded in cobwebs.</p>
 					<h2>Where is the safest place to stand outside in a thunderstorm?</h2>
 					<p>Tall, pointy objects standing alone in an open space are more likely to get struck by lightning but it's by no means a certainty. Sometimes the flat ground next to a tall tree can be hit. A car or other enclosed metal structure is the safest place to be in a thunderstorm. Failing that, a ditch, trench or group of shrubs of uniform height is better than nothing. Keep away from boundary areas between dissimilar terrain (water and land; rock and earth; trees and fields). Also keep at least five metres away from metal objects or other people as lightning will often jump from one object to another.</p>
+					<h2>Where did you get all these answers?</h2>
+					<p>IT IS FROM <a href="http://www.telegraph.co.uk/news/newstopics/howaboutthat/4696372/Greatest-101-questions-of-all-time-1-20.html">http://www.telegraph.co.uk/news/newstopics/howaboutthat/4696372/Greatest-101-questions-of-all-time-1-20.html</a>. Check it out!</p>
 				</div>
 			</div>
 
